[gd_scene load_steps=7 format=2]

[ext_resource path="res://juego6/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego6/script/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/forward.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="score_label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -16.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="message_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -261.0
margin_top = -99.0
margin_right = 261.0
custom_fonts/font = SubResource( 2 )
text = "Esquiva los  Balones!!"

[node name="start_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -30.5
margin_right = 103.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 3 )
text = "Iniciar"
icon = ExtResource( 3 )
flat = true

[node name="message_timer" type="Timer" parent="."]

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
